--- a/govonokod-copypasta/trunk/govonokod-copypasta/config/databases.yml
+++ b/govonokod-copypasta/trunk/govonokod-copypasta/config/databases.yml
@@ -1,5 +1,7 @@
-#all:
-#  propel:
-#    class:          sfPropelDatabase
-#    param:
-#      dsn:          mysql://root@localhost/dbname
+all:
+  propel:
+    class:          sfPropelDatabase
+    param:
+      dsn:          mysql://root@localhost/govnokod
+      encoding: 	utf8
+      
