уже можно запустить :)

--- a/govonokod-copypasta/trunk/govonokod-copypasta/apps/frontend/config/routing.yml
+++ b/govonokod-copypasta/trunk/govonokod-copypasta/apps/frontend/config/routing.yml
@@ -1,11 +1,11 @@
 # default rules
 homepage:
   url:   /
-  param: { module: default, action: index }
+  param: { module: index, action: index }
 
 default_symfony:
   url:   /symfony/:action/*
-  param: { module: default }
+  param: { module: index }
 
 default_index:
   url:   /:module
