Можно редактировать уже, да :-) как у взрослых

--- a/govonokod-copypasta/trunk/govonokod-copypasta/apps/frontend/config/factories.yml
+++ b/govonokod-copypasta/trunk/govonokod-copypasta/apps/frontend/config/factories.yml
@@ -19,6 +19,24 @@ test:
     param:
       session_path: %SF_TEST_CACHE_DIR%/sessions
 
+all:
+  i18n:
+    class: sfI18N
+    param:
+      source:               XLIFF
+      debug:                on
+      untranslated_prefix:  "[T]"
+      untranslated_suffix:  "[/T]"
+      cache:
+        class: sfFileCache
+        param:
+          automatic_cleaning_factor: 0
+          cache_dir:                 %SF_I18N_CACHE_DIR%
+          lifetime:                  86400
+          prefix:                    %SF_APP_DIR%
+
+
+
 #all:
 #  controller:
 #    class: sfFrontWebController
