--- a/govonokod-copypasta/trunk/govonokod-copypasta/apps/frontend/config/settings.yml
+++ b/govonokod-copypasta/trunk/govonokod-copypasta/apps/frontend/config/settings.yml
@@ -28,6 +28,11 @@ all:
     escaping_strategy:      false            # Determines how variables are made available to templates. Accepted values: on, off.
     escaping_method:        ESC_SPECIALCHARS # Function or helper used for escaping. Accepted values: ESC_RAW, ESC_ENTITIES, ESC_JS, ESC_JS_NO_ENTITIES, and ESC_SPECIALCHARS.
 
+    i18n:                   off       # Enable interface translation. Set to off if your application should not be translated.
+    default_culture:        ru        # Default user culture
+
+    standard_helpers:       [Partial, Cache, Form, I18N]
+
 #all:
 #  .actions:
 #    error_404_module:       default   # To be called when a 404 error is raised
