--- a/trunk/govnoquoter/www/modules/quoter/maps/quote.map.ini
+++ b/trunk/govnoquoter/www/modules/quoter/maps/quote.map.ini
@@ -26,3 +26,15 @@ mutator = "setCreated"
 [text]
 accessor = "getText"
 mutator = "setText"
+
+[description]
+accessor = "getDescription"
+mutator = "setDescription"
+
+[rating]
+accessor = "getRating"
+mutator = "setRating"
+
+[comments_count]
+accessor = "getCommentsCount"
+mutator = "setCommentsCount"
