listing кода по категориям, добавление кода

--- a/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
+++ b/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
@@ -4,3 +4,8 @@
 controller = "list"
 title = "Листинг всех"
 403handle = "none"
+
+[add]
+controller = "save"
+title = "Добавление записи"
+403handle = "none"
