возможность подсветка определенных строк кода

--- a/govnoquoter/www/modules/quoter/maps/quote.map.ini
+++ b/govnoquoter/www/modules/quoter/maps/quote.map.ini
@@ -23,3 +23,7 @@ mutator = "setDescription"
 [rating]
 accessor = "getRating"
 mutator = "setRating"
+
+[highlited_lines]
+accessor = "getHighlitedLines"
+mutator = "setHighlitedLines"
