--- a/govnoquoter/www/modules/quoter/actions/quote.ini
+++ b/govnoquoter/www/modules/quoter/actions/quote.ini
@@ -9,3 +9,16 @@ title = "Просмотр кода"
 controller = "quote"
 title = "Голосование"
 403handle = "none"
+
+[edit]
+controller = "save"
+jip = 1
+icon = "/templates/images/edit.gif"
+title = "Редактировать"
+
+[delete]
+controller = "delete"
+jip = 1
+icon = "/templates/images/delete.gif"
+title = "Удалить"
+confirm = "Вы уверены?"
