--- a/trunk/govnoquoter/www/modules/quoter/maps/quote.map.ini
+++ b/trunk/govnoquoter/www/modules/quoter/maps/quote.map.ini
@@ -27,3 +27,7 @@ mutator = "setRating"
 [highlited_lines]
 accessor = "getHighlitedLines"
 mutator = "setHighlitedLines"
+
+[active]
+accessor = "getIsActive"
+mutator = "setIsActive"
