маленько перевёл (добавил i18n) добавил языков в фикстуресы - потом из консоли закину в БД исправил роутинг, теперь в url нет index/item/id, а просто id

--- a/govonokod-copypasta/trunk/govonokod-copypasta/apps/frontend/config/routing.yml
+++ b/govonokod-copypasta/trunk/govonokod-copypasta/apps/frontend/config/routing.yml
@@ -3,6 +3,11 @@ homepage:
   url:   /
   param: { module: index, action: index }
 
+govnopasta:
+  url:   /:id
+  param: { module: index, action: item }
+  requirements: { id: \d+ }
+
 default_symfony:
   url:   /symfony/:action/*
   param: { module: index }
