--- a/trunk/govnoquoter/www/modules/quoter/maps/quote.map.ini
+++ b/trunk/govnoquoter/www/modules/quoter/maps/quote.map.ini
@@ -7,6 +7,7 @@ once = "true"
 accessor = "getCategory"
 mutator = "setCategory"
 owns = "quoteCategory.id"
+join_type = "inner"
 
 [created]
 accessor = "getCreated"
