--- a/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
+++ b/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
@@ -14,3 +14,13 @@ title = "Добавление записи"
 controller = "export"
 title = "Экспорт в rss"
 403handle = "none"
+
+[admin]
+controller = "admin"
+title = "Говноадминка"
+
+[addCategory]
+controller = "saveCategory"
+jip = 1
+icon = "/templates/images/add.gif"
+title = "Добавить категорию"
