--- a/trunk/govnoquoter/www/modules/quoter/actions/quoteCategory.ini
+++ b/trunk/govnoquoter/www/modules/quoter/actions/quoteCategory.ini
@@ -4,3 +4,9 @@
 controller = "list"
 title = "Список"
 403handle = "none"
+
+[editCategory]
+controller = "saveCategory"
+jip = 1
+icon = "/templates/images/edit.gif"
+title = "Редактировать"
