--- a/govnoquoter/www/modules/quoter/maps/quote.map.ini
+++ b/govnoquoter/www/modules/quoter/maps/quote.map.ini
@@ -32,3 +32,7 @@ mutator = "setHighlitedLines"
 [active]
 accessor = "getIsActive"
 mutator = "setIsActive"
+
+[comments_count]
+accessor = "getCommentsCount"
+mutator = "setCommentsCount"
