--- a/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
+++ b/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
@@ -1,4 +1,4 @@
-; quoteFolder actions config
+﻿; quoteFolder actions config
 
 [listAll]
 controller = "list"
@@ -24,3 +24,8 @@ controller = "saveCategory"
 jip = 1
 icon = "/templates/images/add.gif"
 title = "Добавить категорию"
+
+[search]
+controller = "search"
+title = "Поиск"
+403handle = "none"
