--- a/trunk/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
+++ b/trunk/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
@@ -1,4 +1,4 @@
-﻿; quoteFolder actions config
+; quoteFolder actions config
 
 [listAll]
 controller = "list"
@@ -28,4 +28,9 @@ title = "Добавить категорию"
 [search]
 controller = "search"
 title = "Поиск"
+403handle = "none"
+
+[best]
+controller = "best"
+title = "Лучшие"
 403handle = "none"
