--- a/govnoquoter/www/modules/quoter/actions/quote.ini
+++ b/govnoquoter/www/modules/quoter/actions/quote.ini
@@ -1,4 +1,4 @@
-﻿; quote actions config
+; quote actions config
 
 [view]
 controller = "view"
@@ -22,3 +22,7 @@ jip = 1
 icon = "/templates/images/delete.gif"
 title = "Удалить"
 confirm = "Вы уверены?"
+
+[exportComments]
+controller = "exportComments"
+403handle = "none"
