--- a/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
+++ b/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
@@ -1,4 +1,4 @@
-; quoteFolder actions config
+﻿; quoteFolder actions config
 
 [listAll]
 controller = "list"
@@ -33,4 +33,8 @@ title = "Поиск"
 [best]
 controller = "best"
 title = "Лучшие"
+403handle = "none"
+
+[exportAllComments]
+controller = "exportComments"
 403handle = "none"
