--- a/govonokod-copypasta/trunk/govonokod-copypasta/apps/frontend/config/factories.yml
+++ b/govonokod-copypasta/trunk/govonokod-copypasta/apps/frontend/config/factories.yml
@@ -24,7 +24,7 @@ all:
     class: sfI18N
     param:
       source:               XLIFF
-      debug:                on
+      debug:                off
       untranslated_prefix:  "[T]"
       untranslated_suffix:  "[/T]"
       cache:
