лучший говнокод за день

--- a/govnoquoter/www/modules/quoter/maps/quoteCategory.map.ini
+++ b/govnoquoter/www/modules/quoter/maps/quoteCategory.map.ini
@@ -15,3 +15,5 @@ mutator = "setTitle"
 [quote_counts]
 accessor = "getQuoteCounts"
 mutator = "setQuoteCounts"
+orderBy = 1
+orderByDirection = "DESC"
