--- a/trunk/govnoquoter/www/modules/quoter/maps/quote.map.ini
+++ b/trunk/govnoquoter/www/modules/quoter/maps/quote.map.ini
@@ -13,6 +13,10 @@ join_type = "inner"
 accessor = "getCreated"
 mutator = "setCreated"
 
+[deleted]
+accessor = "getDeleted"
+mutator = "setDeleted"
+
 [text]
 accessor = "getText"
 mutator = "setText"
