--- a/govnoquoter/www/modules/comments/maps/comments.map.ini
+++ b/govnoquoter/www/modules/comments/maps/comments.map.ini
@@ -26,3 +26,7 @@ accessor = "getFolder"
 mutator = "setFolder"
 
 owns = "commentsFolder.id"
+
+[rating]
+accessor = "getRating"
+mutator = "setRating"
