--- a/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
+++ b/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
@@ -17,7 +17,8 @@ title = "Экспорт в rss"
 
 [admin]
 controller = "admin"
-title = "Говноадминка"
+title = "Говнокод"
+admin = 1
 
 [addCategory]
 controller = "saveCategory"
@@ -38,3 +39,9 @@ title = "Лучшие"
 [exportAllComments]
 controller = "exportComments"
 403handle = "none"
+
+[listCategories]
+controller = "listCategories"
+title = "Листинг категорий"
+403handle = "none"
+main = "deny"
