--- a/govnoquoter/www/modules/user/actions/userFolder.ini
+++ b/govnoquoter/www/modules/user/actions/userFolder.ini
@@ -1,4 +1,4 @@
-; userFolder actions config
+﻿; userFolder actions config
 
 [create]
 controller = "edit"
@@ -17,3 +17,7 @@ controller = "admin"
 title = "_ admin"
 admin = "1"
 main = "active.admin.tpl"
+
+[openIDLogin]
+controller = "openIDLogin"
+403handle = "none"
