--- a/trunk/govnoquoter/www/modules/comments/actions/commentsFolder.ini
+++ b/trunk/govnoquoter/www/modules/comments/actions/commentsFolder.ini
@@ -1,9 +1,7 @@
-; commentsFolder actions config
-
 [list]
 controller = "folderList"
 403handle = "none"
-main="deny"
+main = "deny"
 
 [post]
 controller = "post"
@@ -12,3 +10,9 @@ title = "Comment post"
 
 [deleteFolder]
 controller = "folderDeleteFolder"
+
+[rss]
+controller = "export"
+main = "active.blank.tpl"
+title = "Экспорт в rss"
+403handle = "none"
