--- a/govnoquoter/www/.htaccess
+++ b/govnoquoter/www/.htaccess
@@ -18,6 +18,9 @@ RewriteCond %{SCRIPT_FILENAME} !-f
 RewriteRule ^templates/js/(.*\.([^.]*)) templates/external.php?type=$2&files=$1 [L]
 
 RewriteCond %{SCRIPT_FILENAME} !-f
+RewriteRule ^templates/media/(.*\.([^.]*)) templates/external.php?type=bundle&hash=$1&%{QUERY_STRING} [L]
+
+RewriteCond %{SCRIPT_FILENAME} !-f
 #Uncomment the next line if you don't want to rewrite exists folders
 #RewriteCond %{SCRIPT_FILENAME} !-d
 
