--- a/trunk/govnoquoter/www/.htaccess
+++ b/trunk/govnoquoter/www/.htaccess
@@ -18,7 +18,7 @@ RewriteCond %{SCRIPT_FILENAME} !-f
 RewriteRule ^templates/js/(.*\.([^.]*)) templates/external.php?type=$2&files=$1 [L]
 
 RewriteCond %{SCRIPT_FILENAME} !-f
-RewriteRule ^templates/media/(.*\.([^.]*)) templates/external.php?type=bundle&hash=$1&%{QUERY_STRING} [L]
+RewriteRule ^templates/media/(.*\.([^.]*)) templates/bundle.php?hash=$1&%{QUERY_STRING} [L]
 
 RewriteCond %{SCRIPT_FILENAME} !-f
 #Uncomment the next line if you don't want to rewrite exists folders
