--- a/trunk/govnoquoter/www/modules/user/actions/user.ini
+++ b/trunk/govnoquoter/www/modules/user/actions/user.ini
@@ -39,3 +39,7 @@ main = "active.blank.tpl"
 title = "Общие настройки пользователя"
 403handle = "none"
 controller = "preferences"
+
+[view]
+403handle = "none"
+controller = "view"
