--- a/govnoquoter/www/modules/quoter/actions/quote.ini
+++ b/govnoquoter/www/modules/quoter/actions/quote.ini
@@ -8,16 +8,12 @@ title = "Просмотр кода"
 [edit]
 controller = "save"
 jip = 1
-icon = "/templates/images/edit.gif"
+icon = "sprite:mzz-icon/page-text/edit"
 title = "Редактировать"
 
 [delete]
 controller = "delete"
 jip = 1
-icon = "/templates/images/delete.gif"
+icon = "sprite:mzz-icon/page-text/del"
 title = "Удалить"
 confirm = "Вы уверены?"
-
-[exportComments]
-controller = "exportComments"
-403handle = "none"
