--- a/govnoquoter/www/modules/quoter/actions/quoteCategory.ini
+++ b/govnoquoter/www/modules/quoter/actions/quoteCategory.ini
@@ -8,5 +8,5 @@ title = "Список"
 [editCategory]
 controller = "saveCategory"
 jip = 1
-icon = "/templates/images/edit.gif"
+icon = "sprite:mzz-icon/page-text/edit"
 title = "Редактировать"
