--- a/trunk/govnoquoter/www/modules/user/actions/user.ini
+++ b/trunk/govnoquoter/www/modules/user/actions/user.ini
@@ -1,3 +1,5 @@
+; user actions config
+
 [login]
 controller = "login"
 403handle = "none"
@@ -9,21 +11,21 @@ main = "active.blank.tpl"
 
 [edit]
 controller = "save"
-jip = 1
-icon = "sprite:mzz-icon/mzz-icon-user/mzz-overlay-edit"
+jip = "1"
+icon = "sprite:mzz-icon/user/edit"
 title = "Редактировать"
 
 [memberOf]
 controller = "memberOf"
-jip = 1
-icon = "sprite:mzz-icon/mzz-icon-group"
+jip = "1"
+icon = "sprite:mzz-icon/group"
 title = "Группы"
 main = "active.blank.tpl"
 
 [delete]
 controller = "delete"
-jip = 1
-icon = "sprite:mzz-icon/mzz-icon-user/mzz-overlay-del"
+jip = "1"
+icon = "sprite:mzz-icon/user/del"
 title = "Удалить"
 confirm = "Вы хотите удалить этого пользователя?"
 main = "active.blank.tpl"
