--- a/govnoquoter/www/modules/user/actions/userFolder.ini
+++ b/govnoquoter/www/modules/user/actions/userFolder.ini
@@ -1,9 +1,9 @@
 ﻿; userFolder actions config
 
 [create]
-controller = "edit"
+controller = "save"
 jip = "1"
-icon = "/templates/images/useradd.gif"
+icon = "sprite:mzz-icon/user/add"
 title = "Добавить пользователя"
 main = "active.blank.tpl"
 
