--- a/trunk/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
+++ b/trunk/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
@@ -10,6 +10,7 @@ title = "Добавление записи"
 [rss]
 controller = "export"
 title = "Экспорт в rss"
+main = "active.blank.tpl"
 403handle = "none"
 
 [admin]
