--- a/trunk/govnoquoter/www/modules/user/actions/userFolder.ini
+++ b/trunk/govnoquoter/www/modules/user/actions/userFolder.ini
@@ -22,3 +22,7 @@ main = "active.admin.tpl"
 controller = "openIDLogin"
 main = "active.main.tpl"
 403handle = "none"
+
+[preferences]
+title = "Настройки пользователя"
+controller = "preferences"
