--- a/trunk/govnoquoter/www/modules/quoter/actions/quote.ini
+++ b/trunk/govnoquoter/www/modules/quoter/actions/quote.ini
@@ -1,5 +1,3 @@
-; quote actions config
-
 [view]
 controller = "view"
 title = "Просмотр кода"
@@ -10,6 +8,13 @@ controller = "save"
 jip = 1
 icon = "sprite:mzz-icon/page-text/edit"
 title = "Редактировать"
+
+[active]
+controller = "delete"
+title = "Изменить активность"
+jip = true
+icon = "sprite:mzz-icon/info"
+confirm = "Вы уверены, что хотите изменить активность данного элемента?"
 
 [delete]
 controller = "delete"
