--- a/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
+++ b/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
@@ -9,13 +9,17 @@ title = "Добавление записи"
 
 [admin]
 controller = "admin"
-title = "Говнокод"
 admin = 1
+
+[adminCategories]
+controller = "adminCategories"
+title = "Список категорий"
+admin = true
 
 [addCategory]
 controller = "saveCategory"
 jip = 1
-icon = "/templates/images/add.gif"
+icon = "sprite:mzz-icon/page/add"
 title = "Добавить категорию"
 
 [search]
