--- a/govnoquoter/www/modules/quoter/actions/quoteCategory.ini
+++ b/govnoquoter/www/modules/quoter/actions/quoteCategory.ini
@@ -10,3 +10,5 @@ controller = "saveCategory"
 jip = 1
 icon = "sprite:mzz-icon/page-text/edit"
 title = "Редактировать"
+route_name = "withAnyParam"
+route.name = "->getName"
