--- a/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
+++ b/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
@@ -14,7 +14,7 @@ admin = 1
 [adminCategories]
 controller = "adminCategories"
 title = "Список категорий"
-admin = true
+admin = 1
 
 [addCategory]
 controller = "saveCategory"
@@ -37,3 +37,9 @@ controller = "listCategories"
 title = "Листинг категорий"
 403handle = "none"
 main = "deny"
+
+[rss]
+main = "active.blank.tpl"
+title = "Экспорт в rss"
+403handle = "none"
+controller = "rss"
