--- a/trunk/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
+++ b/trunk/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
@@ -43,3 +43,9 @@ main = "active.blank.tpl"
 title = "Экспорт в rss"
 403handle = "none"
 controller = "rss"
+
+[userrss]
+main = "active.blank.tpl"
+controller = "rss"
+title = "Rss лента пользователя"
+403handle = "none"
