--- a/trunk/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
+++ b/trunk/govnoquoter/www/modules/quoter/actions/quoteFolder.ini
@@ -49,3 +49,8 @@ main = "active.blank.tpl"
 controller = "rss"
 title = "Rss лента пользователя"
 403handle = "none"
+
+[userquotes]
+controller = "userQuotes"
+title = "Цитаты пользователя"
+403handle = "none"
