--- a/govnoquoter/www/modules/quoter/actions/quote.ini
+++ b/govnoquoter/www/modules/quoter/actions/quote.ini
@@ -12,7 +12,7 @@ title = "Редактировать"
 [active]
 controller = "delete"
 title = "Изменить активность"
-jip = true
+jip = 1
 icon = "sprite:mzz-icon/info"
 confirm = "Вы уверены, что хотите изменить активность данного элемента?"
 
