--- a/branches/govnokod2/app/config/config.yml
+++ b/branches/govnokod2/app/config/config.yml
@@ -17,17 +17,17 @@ twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
 
-## Doctrine Configuration
-#doctrine:
-#   dbal:
-#       dbname:   xxxxxxxx
-#       user:     xxxxxxxx
-#       password: ~
-#       logging:  %kernel.debug%
-#   orm:
-#       auto_generate_proxy_classes: %kernel.debug%
-#       mappings:
-#           HelloBundle: ~
+# Doctrine Configuration
+doctrine:
+    dbal:
+        dbname:   govnokod2
+        user:     user
+        password: ~
+        logging:  %kernel.debug%
+    orm:
+        auto_generate_proxy_classes: %kernel.debug%
+        mappings:
+            QuestionBundle: ~
 
 ## Swiftmailer Configuration
 #swiftmailer:
