--- a/branches/govnokod2/app/config/routing.yml
+++ b/branches/govnokod2/app/config/routing.yml
@@ -1,2 +1,2 @@
-hello:
-    resource: "@HelloBundle/Resources/config/routing.yml"
+question:
+    resource: "@QuestionBundle/Resources/config/routing.yml"
