--- a/branches/govnokod2/src/Govnokod/QuestionBundle/Resources/config/routing.yml
+++ b/branches/govnokod2/src/Govnokod/QuestionBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-#homepage:
-#    pattern:  /
-#    defaults: { _controller: QuestionBundle:Default:index }
+homepage:
+    pattern:  /
+    defaults: { _controller: QuestionBundle:Default:index }
