--- a/src/Govnokod/QuestionBundle/Resources/config/routing.yml
+++ b/src/Govnokod/QuestionBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 homepage:
     pattern:  /
     defaults: { _controller: QuestionBundle:Default:index }
+
+questionAsk:
+    pattern: /ask
+    defaults: { _controller: QuestionBundle:Default:ask}
